2008-02-14 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/win32pbs.m (-receivedEvent:...forMode:): Don't call NSApp
	to terminate the program.

2008-02-08 Fred Kiefer <FredKiefer@gmx.de>

        * Source/art/ARTContext.m (-GSDrawImage:): Hack to allow the
	handling of pre-multiplied bitmaps.

2008-01-31 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/win32pbs.m: Use event polling code from WIN32Server.m.

2008-01-31 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m: Improve support for RTF and add TIFF support.

2008-01-29 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m: Add support for variable available clipboard
	types and minimal support for RTF.

2008-01-26 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m: Add secondary selection support. Define some more
	MIME types and add support for more standard targets. 

2008-01-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m (-setupAttributes): Use
	FC_PIXEL_SIZE instead of FC_SIZE. Fixes #21912.

2008-01-21 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGOpenGL.h,
	* Source/x11/XGGLContext.m,
	* Source/x11/XGGLFormat.m: 
	Get to work with newer versions of GLX.
	Patch by Thomas Gamper <icicle@cg.tuwien.ac.at>,
	slightly reworked.
	
2008-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-setWindowdevice:forContext:):
	Correct wrong parameter name.
	
2008-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m: (-setWindowdevice:forContext:),
	* Source/win32/WIN32Server.m (-setWindowdevice:forContext:):
	Method replaces windowdevice:.
	* Source/gsc/GSContext.m,
	* Source/gsc/GSStreamContext.m,
        * Source/art/ARTContext.m,
	* Source/cairo/CairoContext.m,
	* Source/xlib/XGContext.m,
	* Source/winlib/WIN32Context.m (+GStateClass, +handlesPS):
	New methods to simplify the implementation of
	initWithContextInfo:. In that method call
	setWindowdevice:forContext: when the destination is a window.
	* Source/art/ARTContext.m (-setupDrawInfo): New method, code comes